i deleted test.scss

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background: black url("pexels-anni-roenkae-2832382tiny.webp") center center no-repeat;
+    background: black url(pexels-anni-roenkae-2832382tiny.webp) center center no-repeat;
     background-size: cover;
     color: white;
 }
