--- a/style.scss
+++ b/style.scss
@@ -1,113 +1,31 @@
-html {
-    background: black url("pexels-anni-roenkae-2832382tiny.webp") center center no-repeat;
-    background-size: cover;
-    color: white;
+html { background: black url("pexels-anni-roenkae-2832382tiny.webp") center center no-repeat; background-size: cover; color: white;
 }
-body { 
-    display: block;
-    place-items: center;
-    margin: 0;
-    font-family: Inter, Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5em;
+body { display: block; place-items: center; margin: 0; font-family: Inter, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5em;
+    @media (min-width: 500px) { display: grid; }
 }
-@media (min-width: 500px) {
-    body {
-        display: grid;
-    }
-}
-.Container {
-    width: 90%;
-    background: rgba(79, 109, 245, 0.8);
-    padding: 1rem;
-    border-radius: 2rem;
-    font-size: clamp(1rem, 2vw, 2rem);
-    line-height: 1.5em;
-}
-@media (min-width: 300px) {
-    .Container {
-        margin: 2vh;
-        padding: 2rem;
-        border-radius: 2rem;
-    }
-}
-@media (min-width: 500px) {
-    .Container {
-        margin: 7vw;
-        padding: 3rem;
-    }
+.Container { width: 90%; background: rgba(79, 109, 245, 0.8); padding: 1rem; border-radius: 2rem; font-size: clamp(1rem, 2vw, 2rem); line-height: 1.5em;
+    @media (min-width: 300px) { margin: 2vh; padding: 2rem; border-radius: 2rem; }
+    @media (min-width: 500px) { margin: 7vw; padding: 3rem; }
 }
     header
-        .Avatar {
-            display: block;
-            width: 112px;
-            height: auto;
-            margin: 0 1em 1em 0;
-            border-radius: 50%;
+        .Avatar { display: block; width: 112px; height: auto; margin: 0 1em 1em 0; border-radius: 50%;
+            @media (min-width: 380px) { float: left; }
+            @media (min-width: 930px) { width: clamp(130px, 14vw, 12rem); }
         }
-        @media (min-width: 380px) {
-            .Avatar {
-                float: left;
+        .PageTitle { display: block; margin: 0; font-size: clamp(2rem, 6vw, 4rem); line-height: 1em; }
+        .MainDescription { display: block; margin: 0.5em 0 1.5em;
+            @media (min-width: 500px) { margin-bottom: 0.5em; }
+        }
+        main { clear: both; }
+            .LinksList { display: block; margin: 0; padding: 0; border-top: 1px solid #fff;
+                @media (min-width: 1200px) { display: grid; grid-template-columns: 1fr 1fr; }
             }
-        }
-        @media (min-width: 930px) {
-            .Avatar {
-                width: clamp(130px, 14vw, 12rem);
-            }
-        }
-        .PageTitle {
-            display: block;
-            margin: 0;
-            font-size: clamp(2rem, 6vw, 4rem);
-            line-height: 1em;
-        }
-        .MainDescription {
-            display: block;
-            margin: 0.5em 0 1.5em;
-        }
-        @media (min-width: 500px) {
-            .MainDescription {
-                margin-bottom: 0.5em;
-            }
-        }
-    main { clear: both; }
-        .LinksList {
-            display: block;
-            margin: 0;
-            padding: 0;
-            border-top: 1px solid #fff;
-        }
-        @media (min-width: 1200px) {
-            .LinksList {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-            }
-        }
-            .ItemList {
-                display: block;
-                margin: 0;
-                padding: 0;
-                border-bottom: 1px solid #fff;
-            }
-                .LinkList {
-                    display: block;
-                    padding: 0.5em;
-                    color: #fff;
-                    text-decoration: none;
+                .ItemList { display: block; margin: 0; padding: 0; border-bottom: 1px solid #fff;
                 }
-                .LinkList:hover {
-                    background: white;
-                    color: black;
-                }
-                    .TitleList, .TextList {
-                        display: block;
-                        margin: 0;
-                        padding: 0;
-                        font-size: 1em;
-                        line-height: 1.5em;
+                    .LinkList { display: block; padding: 0.5em; color: #fff; text-decoration: none;
+                        &:hover { background: white; color: black; }
                     }
-                    .TextList {
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
+                        .TitleList, .TextList { display: block; margin: 0; padding: 0; font-size: 1em; line-height: 1.5em;
+                        }
+                        .TextList { white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+                        }
